Fixed button spacing issues on mobile and added hover styling to buttons

--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,14 @@ h2 {
   background-color: #91612f;
 }
 
+#about_me_btn:hover {
+  opacity: 50%;
+}
+
+#my_work_btn:hover {
+  opacity: 50%;
+}
+
 #blog_button {
   background-color: #e7e9ec;
   color: black;
